--- a/2.2.1. spring_hibernate/src/main/resources/db.properties
+++ b/2.2.1. spring_hibernate/src/main/resources/db.properties
@@ -1,10 +1,11 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/spring_hiber?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
-db.username=root
-db.password=root
+db.url=jdbc:mysql://127.0.0.1:3306/spring_course
+db.username=bestuser1
+db.password=bestuser1
 
 # Hibernate properties
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create-drop
+
 
